<resources>
    <string name="app_name">Blog</string>
    <string name="post">Add Post</string>
    <string name="setting">Setting</string>
    <string name="desc">Post Description…</string>
    <string name="title">Post Title…</string>
    <string name="submit">Submit Post</string>
    <string name="register">Register</string>
    <string name="name">Name…</string>
    <string name="email">Email…</string>
    <string name="password">Password…</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="new_account">need a new account</string>
    <string name="check_logging">Checking Logging…</string>
    <string name="setup">Finish Setup</string>
    <string name="finish">Finishing Setup…</string>
    <string name="start">Starting Sign in…</string>
    <string name="post_goes_here">Post goes here</string>
    <string name="post_desc_here">Post desc here</string>
    <string name="username">UserName</string>
</resources>
